Bug 1598841 - nsCanvasFrame anonymous content needs to be document-level. r=bdahl,heycam a=jcristau

Otherwise code like StyleChildrenIterator won't find it, plus it is the right
thing to do anyway.

You don't really want this to inherit from the root element, even though given
this content is under our control (only in chrome documents) it is less of an
issue.

Differential Revision: https://phabricator.services.mozilla.com/D56637

--HG--
extra : source : 46b6fba8836f1c4b5ed5fcb4cef800824964485f